# pocket-dhf

./: .gitignore  .htmlhintrc  .markdownlint.json  .pre-commit-config.yaml  .stylelintrc.json  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  main.py  pyproject.toml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  security.yml
app/: __init__.py  data_utils.py  routes.py
app/static/css/: style.css
app/templates/: base.html  browse.html  configuration.html  index.html  reports.html  validation.html
docs/: data-format.md  specifications.md  user-guide.md
reports/: coverage.json  test-report.html
sample-data/: README.md  dhf_data.yaml
sample-data/report-templates/: requirements_and_needs.md  risk_management.md  specifications.md
scripts/: check_copyright.py  check_docstrings.py
tests/: __init__.py  conftest.py  run_tests.py
tests/integration/: test_api_endpoints.py  test_drag_resize.py  test_popup_editing.py  test_report_endpoints.py  test_sidebar_focus.py  test_traceability_navigation.py  test_traceability_ui.py  test_validation_page.py  test_web_pages.py
tests/unit/: test_additional_coverage.py  test_data_utils.py  test_data_utils_coverage.py  test_dynamic_linked_risks.py  test_nested_requirements.py  test_report_generation.py  test_routes_coverage.py  test_routes_extended_coverage.py  test_traceability_api.py
